--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Website</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to the homepageo</h1>
     <p>This is my first webpage!</p>
 </body>
 </html>
