--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Homepage changed to be pushed to GH</title>
 </head>
 <body>
     <h1>Welcome to the homepageo</h1>
